# BPE_tokenizer

./: .gitignore  README.md  gpt4_tokenizer.vocab  pyproject.toml  tokenizer.model
example_data/: wikipedia_page.txt
examples/: tokenizer.model  tokenizer.vocab  train_tokenizer.py  use_tokenizer.py
examples/notebooks/: download_data.ipynb
notebooks/: download_data.ipynb
saved_tokenizers/: tokenizer.vocab
src/: tokenizer.model  tokenizer.py
src/bpe_tokenizer/: __init__.py  tokenizer.py  utils.py
tests/: test_tokenizer.py  wikipedia_page.txt
