[project]
name = "bpe-tokenizer"
version = "0.1.1"
description = "BPE tokenizer implementation"
authors = [
    {"name"="Francesco Arnò", "email"= ""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "regex>=2026.5.9",
]

[project.optional-dependencies]
download-data = [
    "jupyter>=1.1.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
lint = [
    "ruff>=0.15.13",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["src/bpe_tokenizer"]

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"