[project]
name = "bpe-tokenizer"
dynamic = ["version"]
description = "BPE tokenizer implementation"
authors = [
    {"name"="Francesco Arnò", "email"= ""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "regex>=2026.5.9",
]

[project.optional-dependencies]
download-data = [
    "jupyter>=1.1.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
lint = [
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/bpe_tokenizer/_version.py"
